# rmtt_ros

./: .gitignore  README.md
rmtt_apriltag/: CMakeLists.txt  package.xml
rmtt_apriltag/config/: settings.yaml  tags.yaml
rmtt_apriltag/launch/: continuous_detection.launch  detection.launch
rmtt_description/: CMakeLists.txt  package.xml
rmtt_description/launch/: rmtt_description.launch
rmtt_description/urdf/: tello_talent.urdf  tello_talent.xacro
rmtt_driver/: CMakeLists.txt  package.xml
rmtt_driver/config/: camera_info.yaml
rmtt_driver/launch/: rmtt_bringup.launch
rmtt_driver/scripts/: rmtt_node.py  rmtt_scan_ip.py  set_sta.py
rmtt_midas/: CMakeLists.txt  README.md  package.xml
rmtt_midas/launch/: midas.launch
rmtt_midas/src/: rmtt_midas.cpp
rmtt_orb3/: CMakeLists.txt  README.md  package.xml  rmtt_mapping.rviz
rmtt_orb3/SettingsFile/Monocular/: rmtt_mono.txt  rmtt_mono.yaml
rmtt_orb3/SettingsFile/Monocular-Inertial/: TUM-VI.yaml
rmtt_orb3/include/: ImuTypes.h
rmtt_orb3/launch/: rmtt_orb3.launch  rmtt_slam.launch
rmtt_orb3/src/: ros_mono.cc  ros_mono_inertial.cc  ros_stereo_inertial.cc
rmtt_orb3/src/src/: Atlas.cc  FrameDrawer.cc  LocalMapping.cc  MapDrawer.cc  ORBmatcher.cc  Optimizer.cc  Settings.cc  System.cc  Tracking.cc  Viewer.cc
rmtt_ros/: CMakeLists.txt  package.xml
rmtt_teleop/: CMakeLists.txt  package.xml
rmtt_teleop/launch/: rmtt_teleop_joy.launch  rmtt_teleop_key.launch
rmtt_teleop/scripts/: rmtt_teleop_joy.py  rmtt_teleop_key.py
rmtt_tracker/: CMakeLists.txt  package.xml
rmtt_tracker/config/: tracker_pid.cfg
rmtt_tracker/launch/: rmtt_face_tracker.launch  rmtt_tag_tracker.launch  vrpn.launch
rmtt_tracker/scripts/: rmtt_face_tracker.py  rmtt_tag_tracker.py
rmtt_vrpn_client/: CMakeLists.txt  README.md  package.xml  vrpn.rviz
rmtt_vrpn_client/include/vrpn_client_ros/: vrpn_client_ros.h
rmtt_vrpn_client/launch/: rmtt_connection.launch  rmtt_mapping.launch
rmtt_vrpn_client/src/: vrpn_client_ros.cpp
